--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- Main App -->
     <div class="app-container">
-        <h1 class="app-title">Today's Focus</h1>
+        <h1 class="app-title">Today's Focus here</h1>
         <ul id="todoList" style="list-style: none;"></ul>
         <div id="emptyState" class="empty-state" style="display: none;">
             <p>All clear for today! 🎉</p>
