--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>GlassFocus - Focus & Grow</title>
-    
+    <!-- Yandex.RTB -->
+<script>window.yaContextCb=window.yaContextCb||[]</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#152433">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,7 +27,16 @@
     <div class="progress-container">
         <div class="progress-bar" id="progressBar"></div>
     </div>
-
+<!-- Yandex.RTB R-A-18378818-1 -->
+<div id="yandex_rtb_R-A-18378818-1"></div>
+<script>
+window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+        "blockId": "R-A-18378818-1",
+        "renderTo": "yandex_rtb_R-A-18378818-1"
+    })
+})
+</script>
     <!-- Header Area -->
     <div class="header-container">
         <div class="header-left">
