--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
     <div class="progress-container">
         <div class="progress-bar" id="progressBar"></div>
     </div>
-<script async="async" data-cfasync="false" src="https://pl28425108.effectivegatecpm.com/6d959507a80590d687c2458e746bdba2/invoke.js"></script>
+
+
+
+    <!-- ads -->
+     <script async="async" data-cfasync="false" src="https://pl28425108.effectivegatecpm.com/6d959507a80590d687c2458e746bdba2/invoke.js"></script>
 <div id="container-6d959507a80590d687c2458e746bdba2"></div>
+     <!--  -->
+
+
 
     <!-- Header Area -->
     <div class="header-container">
