Update support section text and link

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                 <h3>Support Development</h3>
                 <div class="setting-item glass-surface" style="flex-direction: column; align-items: flex-start; gap: 12px;">
                     <div class="setting-label">
-                        <div class="setting-label-title">Enjoying GlassFocus?</div>
-                        <div class="setting-label-desc">Support the developer with a coffee ☕</div>
+                        <div class="setting-label-title">Like it or gave any helpful thing</div>
+                        <div class="setting-label-desc">Support the Student with a coffee ☕</div>
                     </div>
-                    <a href="https://buymeacoffee.com/sarkorbekoy" target="_blank" class="coffee-btn">
+                    <a href="https://buymeacoffee.com/thesarkorb9" target="_blank" class="coffee-btn">
                         <span style="font-size: 1.4rem;">☕</span>
                         Buy me a coffee
                     </a>
