--- a/index.html
+++ b/index.html
@@ -280,5 +280,16 @@
     </div>
 
     <script src="app.js"></script>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FP34J9249Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FP34J9249Z');
+</script>
+
 </body>
 </html>
